package com.aterrizar.exception;

public class AsientoLanchitaNoDisponibleException extends Exception {
    public AsientoLanchitaNoDisponibleException(String message) {
        super(message);
    }
}
