package com.aterrizar.exception;

public class TipoUsuarioNoDisponibleException {
}
