package com.aterrizar.modelo.Asiento;

public interface EstadoAsiento {
}
