package com.aterrizar.modelo.Asiento;

public class EstadoAsientoDisponible implements EstadoAsiento {
}
