package com.aterrizar.modelo.Ubicacion;

public interface Ubicacion {
}
