package com.aterrizar.modelo.Ubicacion;

public class UbicacionCentro implements Ubicacion {
}
