package com.aterrizar.modelo.Ubicacion;

public class UbicacionPasillo implements Ubicacion {
}
