package com.aterrizar.modelo.Ubicacion;

public class UbicacionVentanilla implements Ubicacion {

}
